--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LOX</title>
 </head>
 <body>
+    <h1>HAHHAHAHAH</h1>
+    <h2>IIIIIIIII</h2>
     
 </body>
 </html>
