--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOX</title>
+    <link href="styles.css" rel="stylessheet">
+
 </head>
 <body>
-    <h1>HAHHAHAHAH</h1>
+    <h1 style="color: blue;">HAHHAHAHAH</h1>
     <h2>IIIIIIIII</h2>
-    
+    <div id="sds">HALO</div>
 </body>
 </html>
